@@ -73,6 +73,7 @@
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <configuration>
+		   <warSourceExcludes>WEB-INF/lib/*</warSourceExcludes>
            <archive>
              <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
            </archive>
