@@ -9,6 +9,7 @@ Import-Package: junit.framework,
  org.springframework.core.io.support,
  org.springframework.osgi.io,
  org.springframework.util,
+ org.springframework.osgi.util,
  org.springframework.osgi.test,
  org.springframework.osgi.test.provisioning,
  org.springframework.test,
