@@ -2,7 +2,7 @@ Web-ContextPath: simple-web-app
 Bundle-ManifestVersion: 2
 Bundle-Name: Simple OSGi War
 Bundle-SymbolicName: org.springframework.osgi.samples.simplewebapp
-Bundle-Classpath: WEB-INF/classes
+Bundle-ClassPath: WEB-INF/classes
 Import-Package: javax.servlet;version="2.4.0",
  javax.servlet.http;version="2.4.0",
  javax.servlet.resources;version="2.0.0",
